cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_384.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/ssl_lib.c:486: error: DEAD_STORE
  The value written to &min_version (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/ssl_lib.c:486:13: Write of unused value
484.           if (min_version == 0)
485.               /* Ignore DTLS1_BAD_VER */
486.               min_version = DTLS1_VERSION;
                   ^
487.           if (max_version == 0)
488.               max_version = DTLS1_2_VERSION;
